--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Minimal theme
-logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
-show_downloads: true
+title: Divy Patel
+logo: /assets/img/sam2.jpg
+description: 
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
